--- a/Practice/HW7/css/width320.css
+++ b/Practice/HW7/css/width320.css
@@ -4,10 +4,13 @@
         display: none;
     }
 
-
     /*HEADER*/
     .overlay {
         display: none;
+    }
+
+    .menu--vertical .menu__link--current {
+        margin-left: 34%;
     }
 
     .slider {
@@ -138,8 +141,6 @@
         margin-right: 0;
     }
 
-
-
     .banner5 {
         margin-left: 13.5%;
 
@@ -154,8 +155,4 @@
     .footer__summary {
         margin: 39px 0 144px;
     }
-
-
-
-
 }
