--- a/Practice/HW7/css/style.css
+++ b/Practice/HW7/css/style.css
@@ -73,7 +73,7 @@
 .header {
     position: relative;
     width: 100%;
-    background: url("../img/320/header_bg.jpg") no-repeat center center;
+    background: url("../img/320/header_bg.jpg") no-repeat center 0;
 }
 
 .logo {
@@ -82,6 +82,7 @@
     color: rgb(255, 255, 255);
     line-height: 0.703;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+    word-spacing: -0.025em;
 }
 
 .logo--end {
@@ -94,9 +95,13 @@
     background-color: rgb(0, 0, 0);
     opacity: 0.2;
     left: 0;
-    top: 203px;
+    /*top: 203px;*/
     width: 2400px;
-    height: 246px;
+
+}
+
+.slider {
+    color: #ffffff;
 }
 
 .slider__name {
