--- a/Practice/HW7/css/width480.css
+++ b/Practice/HW7/css/width480.css
@@ -2,15 +2,24 @@
     .hidden-m {
         visibility: hidden;
     }
-.hidden-480 {
-    display: none;
-}
+    .hidden-480 {
+       display: none;
+    }
+
+    .position-center {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
 /*HEADER*/
-    .logo {
-        padding-top: 73px;
+    .header__logo {
         margin-left: -1px;
         margin-bottom: 34px;
+    }
+    .overlay {
+        top: 203px;
+        height: 246px;
     }
 
     .header__menu {
@@ -25,7 +34,7 @@
     }
 
     .menu--vertical {
-        display: initial;
+        display: block;
     }
 
     .menu--vertical:hover {
@@ -114,11 +123,12 @@
     }
 
     .slider__wrapper {
-        display: initial;
+        display: block;
     }
 
     .slider__img {
        margin-top: -74px;
+        width: auto;
     }
 
     .slider__text {
@@ -126,10 +136,16 @@
         float: left;
         margin-left: 8px;
         margin-right: 17px;
+        width: auto;
     }
 
     .slider__name {
         margin-left: -1px;
+    }
+
+    .slider__description {
+        margin-top: 7px;
+        letter-spacing: -0.03em;
     }
 
     /*ABOUT COMPANY*/
