--- a/Practice/HW7/css/width480.css
+++ b/Practice/HW7/css/width480.css
@@ -179,9 +179,8 @@
         margin-left: 85%;
     }
 
-    /*Блок NEWS*/
+    /*Блок pingbuller*/
     .avatar {
-        position: absolute;
         top: 15px;
         left: -25px;
     }
