--- a/Practice/HW7/css/width760.css
+++ b/Practice/HW7/css/width760.css
@@ -1,5 +1,7 @@
 @media (max-width: 768px) {
-
+    .hidden-m {
+        visibility: hidden;
+    }
     .position-center {
         display: block;
 
@@ -21,7 +23,7 @@
 
     .slider {
         margin-top: 178px;
-        padding-bottom: 95px;
+        padding-bottom: 97px;
     }
 
     .slider__text {
@@ -39,7 +41,7 @@
 
     .slider__description {
         margin-top: 16px;
-        margin-bottom: 4px;
+        margin-bottom: 2px;
         font-size: 24px;
         letter-spacing: normal;
     }
@@ -55,7 +57,7 @@
 
     .slider__img {
         width: 36.5%;
-        margin-top: -129px;
+        margin-top: -131px;
     }
 
     .slider__switch {
@@ -76,7 +78,6 @@
     }
 
     .info_block {
-        /*height: 200px;*/
         overflow: hidden;
         width: 30%;
         padding-left: 8%;
@@ -90,7 +91,7 @@
 
     .info_block:nth-child(3) {
         padding-left: 10%;
-        background-position: -11px -55px;
+        background-position: 10px -55px;
     }
 
     .about_company__summary {
@@ -108,4 +109,78 @@
     }
 
 
+    .news_wrapper {
+        display: flex;
+        justify-content: space-between;
+        background: #f9f9f9;
+        border-bottom: 1px solid #e6e6e6;
+        padding-bottom: 70px;
+    }
+    /*Блок pingbuller*/
+    .avatar {
+        top: 17px;
+        left: -27px;
+    }
+
+    .pingbuller {
+        margin-top: 13px;
+        margin-left: 5%;
+        margin-right: 7%;
+    }
+
+    .pingbuller__info_block {
+        width: 90.25%;
+        margin: 87px 0  20px -0.75%;
+        padding-left: 11%;
+        padding-bottom:42px;
+        padding-top: 29px;
+    }
+
+    .pingbuller__title {
+        font-size: 24px;
+        letter-spacing: -0.001em;
+    }
+
+    .pingbuller__title--description {
+        font-size: 24px;
+        margin-left: 2px;
+    }
+
+    .pingbuller__summary {
+        margin-top: 8px;
+        padding-right: 7%;
+        height: 145px;
+        letter-spacing: -0.02em;
+    }
+
+    .pingbuller__switch {
+        margin-top: 22px;
+        margin-left: 32.5%;
+        width: 28.125%;
+    }
+
+    /*RECENT UPDATES*/
+    .recent_updates {
+        margin-left: -4%;
+        padding-top: 132px;
+        border: none;
+    }
 }
+    .recent_updates__title {
+        margin-bottom: 19px;
+        margin-left: -0.25%;
+    }
+
+    .recent_updates__post {
+        padding-left: 19%;
+        margin-bottom: -4px;
+    }
+
+    .recent_updates__post:nth-child(3) {
+        margin-bottom: -6px;
+    }
+
+    .recent_updates__link {
+        margin-left: 69.125%;
+        margin-top: -1px;
+    }
