--- a/Practice/HW7/css/style.css
+++ b/Practice/HW7/css/style.css
@@ -154,6 +154,12 @@
      overflow: hidden;
 }
 
+.news_wrapper {
+    background: #f9f9f9;
+    border-bottom: 1px solid #e6e6e6;
+}
+
+
 /*Блок NEWS*/
 
 .pingbuller {
@@ -198,8 +204,6 @@
 .recent_updates {
     padding-top: 48px;
     width: 100%;
-    border-bottom: 1px solid #e6e6e6;
-    background: #f9f9f9;
 }
 
 .recent_updates__post {
