--- a/Practice/HW7/css/width760.css
+++ b/Practice/HW7/css/width760.css
@@ -1,4 +1,4 @@
-@media (max-width: 768px) {
+    @media (max-width: 768px) {
     .hidden-m {
         visibility: hidden;
     }
@@ -112,8 +112,6 @@
     .news_wrapper {
         display: flex;
         justify-content: space-between;
-        background: #f9f9f9;
-        border-bottom: 1px solid #e6e6e6;
         padding-bottom: 70px;
     }
     /*Блок pingbuller*/
@@ -163,24 +161,58 @@
     .recent_updates {
         margin-left: -4%;
         padding-top: 132px;
-        border: none;
     }
+
+        .recent_updates__title {
+            margin-bottom: 19px;
+            margin-left: -0.25%;
+        }
+
+        .recent_updates__post {
+            padding-left: 19%;
+            margin-bottom: -4px;
+        }
+
+        .recent_updates__post:nth-child(3) {
+            margin-bottom: -6px;
+        }
+
+        .recent_updates__link {
+            margin-left: 69.125%;
+            margin-top: -1px;
+        }
+
+
+        /*BANNERS*/
+        .banners__wrapper {
+            padding-top: 26px;
+            padding-bottom: 2px;
+        }
+
+        .banners__item {
+            margin-bottom: 26px;
+        }
+
+        .banner1 {
+            margin-left: 1.75%;
+            margin-right: 7.25%;
+        }
+
+        .banner3 {
+            margin-left: 7.25%;
+        }
+
+        .banner4 {
+            margin-left: 8.5%;
+        }
+
+        .banner5 {
+            margin-left: 8%;
+            margin-top: 21px;
+        }
+
+        .banner6 {
+            margin-left: 7.25%;
+            margin-top: 2px;
+        }
 }
-    .recent_updates__title {
-        margin-bottom: 19px;
-        margin-left: -0.25%;
-    }
-
-    .recent_updates__post {
-        padding-left: 19%;
-        margin-bottom: -4px;
-    }
-
-    .recent_updates__post:nth-child(3) {
-        margin-bottom: -6px;
-    }
-
-    .recent_updates__link {
-        margin-left: 69.125%;
-        margin-top: -1px;
-    }
