--- a/Practice/HW7/css/style.css
+++ b/Practice/HW7/css/style.css
@@ -1,7 +1,20 @@
-.body_wrapper {
-    margin: 0 auto;
+body {
     font-family: "LeagueGothic", Arial, sans-serif;
 }
+
+.position-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.body_wrapper,
+.header
+{   display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .clearfix::after {
     content: "";
     display: table;
@@ -10,12 +23,6 @@
 .hidden-all {
     visibility: hidden;
     position: absolute;
-}
-
-.position-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .title {
@@ -72,9 +79,19 @@
 /*HEADER*/
 
 .header {
-    position: relative;
     width: 100%;
+    position: relative;
     background: url("../img/320/header_bg.jpg") no-repeat center 0;
+}
+
+.header__wrapper {
+    max-width: 960px;
+}
+
+.header__logo {
+    float: left;
+    margin-left: -0.125%;
+    margin-top: 73px;
 }
 
 .logo {
@@ -83,7 +100,7 @@
     color: rgb(255, 255, 255);
     line-height: 0.703;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
-    word-spacing: -0.025em;
+    word-spacing: -1.125em;
 }
 
 .logo--end {
@@ -91,42 +108,104 @@
     letter-spacing: -0.03em;
 }
 
+.header__menu {
+    margin-left: 33.65%;
+    margin-top: 69px;
+}
+
 .overlay {
     position: absolute;
     background-color: rgb(0, 0, 0);
     opacity: 0.2;
+    top: 278px;
     left: 0;
-    /*top: 203px;*/
     width: 100%;
-
+    height: 400px;
 }
 
 .slider {
+    margin-top: 178px;
     color: #ffffff;
 }
 
+.slider__wrapper {
+
+}
+
+.slider__text {
+    float: left;
+    padding-top: 84px;
+    width: 53%;
+}
+
 .slider__name {
-    margin-left: -1px;
-    font-size: 36px;
+    margin-left: -10px;
+    font-size: 60px;
     color: rgb(254, 254, 254);
     line-height: 0.667;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
     text-transform: capitalize;
-    letter-spacing: -0.002em;
+    letter-spacing: -0.008em;
 }
 
 .slider__description {
-    margin-top: 7px;
-    margin-left: -1px;
-    font-size: 20px;
+    margin-top: 10px;
+    margin-left: -9px;
+    font-size: 32px;
     color: #edbfff;
     text-transform: uppercase;
-    letter-spacing: -0.03em;
+    letter-spacing: -0.0025em;
+}
+
+.slider__summary {
+    overflow: hidden;
+    margin-top: 5px;
+    margin-left: -10px;
+    height: 153px;
+    font-size: 18px;
+    line-height: 1.35;
+}
+
+.slider__img {
+    width: 28.25%;
+    margin-top: -24px;
+    margin-left: 115px;
 }
 
 .slider__switch {
-
+    margin-top: 77px;
+    padding-left: 74.25%;
+    padding-bottom: 55px;
 }
+
+.switch__bullet {
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    margin-right: 1.2%;
+    background: #000000 ;
+    border-radius: 50px;
+    opacity: 0.302;
+}
+
+.switch__center {
+    margin-top: 3px;
+    margin-left: 3px;
+    width: 11px;
+    height: 11px;
+    background: #ffffff;
+    border-radius: 50px;
+}
+
+.switch__bullet--theme--light {
+    background: #ffffff;
+    border: 1px solid #e6e6e6   ;
+}
+
+.switch__center--theme--light {
+    background: linear-gradient(#6a6a6a, #000);
+}
+
 
 /*ABOUT COMPANY  block*/
 .about_company{
