--- a/Practice/HW7/css/style.css
+++ b/Practice/HW7/css/style.css
@@ -105,7 +105,7 @@ body {
     color: rgb(255, 255, 255);
     line-height: 0.703;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
-    word-spacing: -1.125em;
+    /*word-spacing: -1.125em;*/
 }
 
 .logo--end {
@@ -426,7 +426,7 @@ body {
 
 .news_categories__post {
     margin-left: 1.25%;
-    margin-bottom: 95px;
+    margin-bottom: 92px;
     width: 27.5%;
 }
 
@@ -439,7 +439,7 @@ body {
 }
 
 .news_categories__title--large {
-    margin-top: -18px;
+
     margin-left: -23px;
     font-size: 48px;
 }
@@ -458,7 +458,7 @@ body {
 }
 
 .news_categories__title {
-    margin-top: -16px;
+
     margin-left: -20px;
 }
 
@@ -481,8 +481,27 @@ body {
 /*FOOTER*/
 
 .footer {
+    padding-top: 41px;
+    padding-bottom: 44px;
     width: 100%;
     background: url("../img/footer_bg.jpg")no-repeat;
     color: rgb(255, 255, 255);
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+.footer__wrapper {
+    width: 100%;
+    max-width: 960px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer__menu {
+    width: 517px;
+}
+
+.footer__summary {
+    margin-top: 7px;
+    margin-right: -8px;
 }
