--- a/Practice/HW7/css/width760.css
+++ b/Practice/HW7/css/width760.css
@@ -2,9 +2,24 @@
     .hidden-m {
         visibility: hidden;
     }
+
+    .hidden-960 {
+        display: block;
+    }
+
+    .hidden-768 {
+        display: none;
+    }
+
     .position-center {
         display: block;
     }
+
+    .title {
+        font-size: 24px;
+    }
+
+    /*HEADER*/
 
     .header__logo {
         margin-left: 1.3%;
@@ -14,19 +29,20 @@
         margin-left: 1.3%;
         width: 84.3%;
     }
+
     .overlay{
         top: 244px;
     }
 
     .slider {
         margin-top: 92px;
-        padding-bottom: 97px;
+        padding-bottom: 44px;
     }
 
     .slider__text {
         float: left;
         margin-left: 4.54%;
-        margin-right: 16.75%;
+        margin-right: 2.75%;
         width: 37%;
     }
 
@@ -38,14 +54,17 @@
 
     .slider__description {
         margin-top: 16px;
-        margin-bottom: 2px;
+        margin-left: -0.25%;
         font-size: 24px;
         letter-spacing: normal;
     }
 
     .slider__summary {
+        margin-top: 4px;
+        margin-left: -1px;
         height: 105px;
-        overflow: hidden;
+        font-size: 16px;
+        line-height: 1.5;
     }
 
     .slider__summary:first-line {
@@ -54,7 +73,7 @@
 
     .slider__img {
         width: 35.5%;
-        margin-top: -131px;
+        margin-top: -47px;
     }
 
     .slider__switch {
@@ -68,27 +87,23 @@
 
     /*ABOUT COMPANY*/
     .about_company {
-        padding-top: 77px;
-        padding-bottom: 64px;
-        display: flex;
-        flex-direction: row;
         justify-content: space-around;
     }
 
     .info_block {
         width: 30%;
         padding-left: 8%;
-        background-position: -86px -1px;
+        background-position: -85px 1px;
     }
 
     .info_block:nth-child(2) {
         padding-left: 8.5%;
-        background-position: -44px -30px;
+        background-position: -49px -28px;
     }
 
     .info_block:nth-child(3) {
         padding-left: 10%;
-        background-position: 10px -55px;
+        background-position: 10px -68px;
     }
 
     .about_company__summary {
@@ -101,89 +116,99 @@
         margin-left: 56%;
     }
 
-    .info_block:nth-child(3)  .about_company__link {
+    .info_block:nth-child(2) .about_company__link {
+        margin-left: 55.5%;
+    }
+
+    .info_block:nth-child(3) .about_company__link {
         margin-left: 60%;
     }
 
 
-    .news_wrapper {
-        display: flex;
-        justify-content: space-between;
-        padding-bottom: 70px;
+    .news__wrapper {
+        padding-bottom: 69px;
     }
+
+    .news {
+        padding-top: 0;
+        max-width: 768px;
+    }
+
     /*Блок pingbuller*/
     .avatar {
-        top: 17px;
+        top: 16px;
         left: -27px;
     }
 
     .pingbuller {
         margin-top: 13px;
-        margin-left: 5%;
-        margin-right: 7%;
+        margin-left: 5.5%;
+        margin-right: -3.75%;
+        width: 100%;
     }
 
     .pingbuller__info_block {
-        width: 90.25%;
-        margin: 87px 0  20px -0.75%;
-        padding-left: 11%;
-        padding-bottom:42px;
-        padding-top: 29px;
+        width: 100%;
+        margin: 87px 0  20px -2%;
+        padding: 1px 0 40px 11.5%;
     }
 
     .pingbuller__title {
-        font-size: 24px;
+        display: block;
+        margin-bottom: 0;
         letter-spacing: -0.001em;
     }
 
     .pingbuller__title--description {
-        font-size: 24px;
         margin-left: 2px;
     }
 
     .pingbuller__summary {
         margin-top: 8px;
-        padding-right: 7%;
         height: 145px;
         letter-spacing: -0.02em;
     }
 
     .pingbuller__switch {
-        margin-top: 22px;
-        margin-left: 32.5%;
-        width: 28.125%;
+        margin-top: 24px;
+        margin-left: 34%;
+        width: 29.125%;
     }
 
     /*RECENT UPDATES*/
     .recent_updates {
-        margin-left: -4%;
-        padding-top: 132px;
+
+        padding-top: 125px;
     }
 
         .recent_updates__title {
+            margin-left: 19%;
             margin-bottom: 19px;
-            margin-left: -0.25%;
+            font-size: 30px;
+            line-height: 0.8;
         }
 
         .recent_updates__post {
-            padding-left: 19%;
-            margin-bottom: -4px;
+            margin-left: 19%;
+            margin-bottom: -3px;
         }
 
         .recent_updates__post:nth-child(3) {
-            margin-bottom: -6px;
+            margin-bottom: 18px;
         }
 
         .recent_updates__link {
-            margin-left: 69.125%;
-            margin-top: -1px;
+            margin-left: 74.75%;
+            margin-top: 22px;
+            letter-spacing: 0.01em;
         }
 
 
         /*BANNERS*/
-        .banners__wrapper {
-            padding-top: 26px;
-            padding-bottom: 2px;
+        .banners {
+            padding-bottom: 0;
+            max-width: 768px;
+            width: 100%;
         }
 
         .banners__item {
@@ -191,12 +216,15 @@
         }
 
         .banner1 {
-            margin-left: 1.75%;
-            margin-right: 7.25%;
+            margin-left: -19.25%;
+        }
+
+        .banner2 {
+            margin-left: -14%;
         }
 
         .banner3 {
-            margin-left: 7.25%;
+            margin-left: -14.75%;
         }
 
         .banner4 {
@@ -204,33 +232,40 @@
         }
 
         .banner5 {
-            margin-left: 8%;
-            margin-top: 21px;
+            margin-left: 9%;
         }
 
         .banner6 {
-            margin-left: 7.25%;
+            margin-left: 17.25%;
             margin-top: 2px;
         }
 
         /*NEWS CATEGORIES*/
 
+        .news_categories__wrapper {
+            padding-top: 0;
+        }
+
         .news_categories {
-            display: flex;
-            justify-content: space-between;
+           width: 100%;
+            max-width: 768px;
             padding-top: 101px;
         }
 
         .news_categories__post {
-            margin-left: 1.25%;
+            margin-left: 4.25%;
             margin-bottom: 95px;
-            overflow: hidden;
-            width: 28.5%;
+            width: 24.5%;
+        }
+
+        .news_categories__post:first-child {
+            display: none;
         }
 
         .news_categories__post:last-child {
+            display: block;
             margin-top: 0;
-            margin-left: 0;
+            margin-right: 1%;
         }
 
         .news_categories__title {
@@ -243,11 +278,15 @@
 
         /*FOOTER*/
         .footer {
+            padding-top: 0;
             padding-bottom: 132px;
+            max-width: 768px;
         }
 
         .footer__menu {
-            padding-top: 41px;
+            width: 100%;
+            margin-top: -5px;
+
         }
 
         .footer__nav {
@@ -256,7 +295,7 @@
         }
 
         .footer__summary {
-            margin: 31px 1.75% 0 0;
+            margin: 101px 1.75% 0 0;
             float: right;
         }
 
